All_Component_DX/force-app/main/default/objects/Coverage_Details__c/Coverage_Details__c.object-meta.xml
<CustomObject>
    <label>Coverage Details</label>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coverage Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>