All_Component_DX/force-app/main/default/objects/Coverage_Details__c/fields/Class_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Class_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Coverage_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>