All_Component_DX/force-app/main/default/objects/Coverage_Details__c/fields/Code_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Code_Coverage__c</fullName>
    <label>Code Coverage</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>