All_Component_DX/force-app/main/default/objects/Coverage_Details__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <length>8</length>
    <type>Text</type>
</CustomField>