All_Component_DX/force-app/main/default/objects/Coverage_Details__c/fields/Total_Lines__c.field-meta.xml
<CustomField>
    <fullName>Total_Lines__c</fullName>
    <label>Total Lines</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>