All_Component_DX/force-app/main/default/objects/Coverage_Details__c/fields/Unit_Test_Failed__c.field-meta.xml
<CustomField>
    <fullName>Unit_Test_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit Test Failed</label>
    <type>Checkbox</type>
</CustomField>