All_Component_DX/force-app/main/default/objects/Coverage_Details__c/listViews/Today_All.listView-meta.xml
<ListView>
    <fullName>Today_All</fullName>
    <columns>NAME</columns>
    <columns>Class_Modified_On__c</columns>
    <columns>Class_Modified_By__c</columns>
    <columns>Code_Coverage__c</columns>
    <columns>Unit_Test_Failed__c</columns>
    <columns>Covered_Lines__c</columns>
    <columns>Total_Lines__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today - All</label>
    <language>en_US</language>
</ListView>